<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="181dp"
        android:layout_gravity="bottom"

        >



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="1" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/string_2" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/string_3">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center|left"
            android:text="@string/string_4">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/string_5">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:text="@string/string_6">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="bottom|right"
            android:text="@string/string_9">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="bottom"
            android:text="@string/string_7">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:text="@string/string_8">

        </Button>



    </GridLayout>

    <GridLayout
        android:layout_width="144dp"
        android:layout_height="181dp"
        android:layout_gravity="bottom|end"

        >

        <Button
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"

            android:text="@string/divide">

        </Button>

        <Button
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"

            android:text="@string/multiply">

        </Button>

        <Button
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_row="0"

            android:layout_column="0"
            android:layout_gravity="right"
            android:text="@string/minus">

        </Button>

        <Button
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_row="0"

            android:layout_column="1"
            android:layout_gravity="right"
            android:text="@string/plus">

        </Button>

        <Button
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_row="0"

            android:layout_column="0"
            android:layout_gravity="bottom|right"
            android:text="@string/even">

        </Button>

        <Button
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_row="0"

            android:layout_column="1"
            android:layout_gravity="bottom|right"
            android:text="@string/percent">

        </Button>


    </GridLayout>

    <ImageView
        android:id="@+id/wallpaper_image"
        android:layout_width="match_parent"
        android:layout_height="480dp"
        android:layout_margin="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:scaleType="centerCrop"
        >


    </ImageView>






</FrameLayout>
